--- a/CSS/anima.css
+++ b/CSS/anima.css
@@ -1,9 +1,9 @@
 .parent {
     width:  100%;
     height: 100%;
+    top:    0;
+    left:   0;
     position: absolute;
-    top:  0;
-    left: 0;
     overflow: auto;
 }
 
@@ -11,27 +11,27 @@
     width:  250px;
     height: 250px;
     position: absolute;
-    top:  0;
-	left: 0;
+    top:    0;
+    left:   0;
     bottom: 0;
-	right:  0;
+    right:  0;
     margin: auto;
 }
 
 
 
 #wrap2{
-	position: relative;
- 	border-style: solid;
- 	border-width: 0px;
-	height: 31px;
-	width:  90%;
+    position: relative;
+    border-style: solid;
+    border-width: 0px;
+    height: 31px;
+    width:  90%;
 }
 
 #redsquare{
 	position:absolute;
-	top: 4px;
-	left:8px;
+	top:   4px;
+	left:  8px;
 	height:30px;
 	width: 100px;
 /* 	background-color:red; */
@@ -45,13 +45,13 @@
      -o-transform: scaleX(-1);
 -webkit-transform: scaleX(-1);
         transform: scaleX(-1);
-        filter: FlipH;
-    -ms-filter: "FlipH";
+           filter: FlipH;
+       -ms-filter: "FlipH";
 }
 
-.normal {}
-
+.normal {
+}
 
 #path_to_ico{
-	display: none;
+    display: none;
 }
